seaqt/QtGui/gen_qpaintengine.nim


proc fcQTextItem_descent(self: pointer, ): float64 {.importc: "QTextItem_descent".}
proc fcQTextItem_ascent(self: pointer, ): float64 {.importc: "QTextItem_ascent".}
proc fcQTextItem_width(self: pointer, ): float64 {.importc: "QTextItem_width".}
proc fcQTextItem_renderFlags(self: pointer, ): cint {.importc: "QTextItem_renderFlags".}
proc fcQTextItem_text(self: pointer, ): struct_miqt_string {.importc: "QTextItem_text".}
proc fcQTextItem_font(self: pointer, ): pointer {.importc: "QTextItem_font".}
proc fcQTextItem_delete(self: pointer) {.importc: "QTextItem_delete".}
proc fcQPaintEngine_new(): ptr cQPaintEngine {.importc: "QPaintEngine_new".}
proc fcQPaintEngine_new2(features: cint): ptr cQPaintEngine {.importc: "QPaintEngine_new2".}
proc fcQPaintEngine_isActive(self: pointer, ): bool {.importc: "QPaintEngine_isActive".}
proc fcQPaintEngine_setActive(self: pointer, newState: bool): void {.importc: "QPaintEngine_setActive".}
proc fcQPaintEngine_begin(self: pointer, pdev: pointer): bool {.importc: "QPaintEngine_begin".}
proc fcQPaintEngine_endX(self: pointer, ): bool {.importc: "QPaintEngine_end".}
proc fcQPaintEngine_updateState(self: pointer, state: pointer): void {.importc: "QPaintEngine_updateState".}
proc fcQPaintEngine_drawRects(self: pointer, rects: pointer, rectCount: cint): void {.importc: "QPaintEngine_drawRects".}
proc fcQPaintEngine_drawRects2(self: pointer, rects: pointer, rectCount: cint): void {.importc: "QPaintEngine_drawRects2".}
proc fcQPaintEngine_drawLines(self: pointer, lines: pointer, lineCount: cint): void {.importc: "QPaintEngine_drawLines".}
proc fcQPaintEngine_drawLines2(self: pointer, lines: pointer, lineCount: cint): void {.importc: "QPaintEngine_drawLines2".}
proc fcQPaintEngine_drawEllipse(self: pointer, r: pointer): void {.importc: "QPaintEngine_drawEllipse".}
proc fcQPaintEngine_drawEllipseWithQRect(self: pointer, r: pointer): void {.importc: "QPaintEngine_drawEllipseWithQRect".}
proc fcQPaintEngine_drawPath(self: pointer, path: pointer): void {.importc: "QPaintEngine_drawPath".}
proc fcQPaintEngine_drawPoints(self: pointer, points: pointer, pointCount: cint): void {.importc: "QPaintEngine_drawPoints".}
proc fcQPaintEngine_drawPoints2(self: pointer, points: pointer, pointCount: cint): void {.importc: "QPaintEngine_drawPoints2".}
proc fcQPaintEngine_drawPolygon(self: pointer, points: pointer, pointCount: cint, mode: cint): void {.importc: "QPaintEngine_drawPolygon".}
proc fcQPaintEngine_drawPolygon2(self: pointer, points: pointer, pointCount: cint, mode: cint): void {.importc: "QPaintEngine_drawPolygon2".}
proc fcQPaintEngine_drawPixmap(self: pointer, r: pointer, pm: pointer, sr: pointer): void {.importc: "QPaintEngine_drawPixmap".}
proc fcQPaintEngine_drawTextItem(self: pointer, p: pointer, textItem: pointer): void {.importc: "QPaintEngine_drawTextItem".}
proc fcQPaintEngine_drawTiledPixmap(self: pointer, r: pointer, pixmap: pointer, s: pointer): void {.importc: "QPaintEngine_drawTiledPixmap".}
proc fcQPaintEngine_drawImage(self: pointer, r: pointer, pm: pointer, sr: pointer, flags: cint): void {.importc: "QPaintEngine_drawImage".}
proc fcQPaintEngine_setPaintDevice(self: pointer, device: pointer): void {.importc: "QPaintEngine_setPaintDevice".}
proc fcQPaintEngine_paintDevice(self: pointer, ): pointer {.importc: "QPaintEngine_paintDevice".}
proc fcQPaintEngine_setSystemClip(self: pointer, baseClip: pointer): void {.importc: "QPaintEngine_setSystemClip".}
proc fcQPaintEngine_systemClip(self: pointer, ): pointer {.importc: "QPaintEngine_systemClip".}
proc fcQPaintEngine_setSystemRect(self: pointer, rect: pointer): void {.importc: "QPaintEngine_setSystemRect".}
proc fcQPaintEngine_systemRect(self: pointer, ): pointer {.importc: "QPaintEngine_systemRect".}
proc fcQPaintEngine_coordinateOffset(self: pointer, ): pointer {.importc: "QPaintEngine_coordinateOffset".}
proc fcQPaintEngine_typeX(self: pointer, ): cint {.importc: "QPaintEngine_type".}
proc fcQPaintEngine_fixNegRect(self: pointer, x: ptr cint, y: ptr cint, w: ptr cint, h: ptr cint): void {.importc: "QPaintEngine_fixNegRect".}
proc fcQPaintEngine_testDirty(self: pointer, df: cint): bool {.importc: "QPaintEngine_testDirty".}
proc fcQPaintEngine_setDirty(self: pointer, df: cint): void {.importc: "QPaintEngine_setDirty".}
proc fcQPaintEngine_clearDirty(self: pointer, df: cint): void {.importc: "QPaintEngine_clearDirty".}
proc fcQPaintEngine_hasFeature(self: pointer, feature: cint): bool {.importc: "QPaintEngine_hasFeature".}
proc fcQPaintEngine_painter(self: pointer, ): pointer {.importc: "QPaintEngine_painter".}
proc fcQPaintEngine_syncState(self: pointer, ): void {.importc: "QPaintEngine_syncState".}
proc fcQPaintEngine_isExtended(self: pointer, ): bool {.importc: "QPaintEngine_isExtended".}
proc fcQPaintEngine_override_virtual_begin(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_begin".}
proc fcQPaintEngine_override_virtual_endX(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_end".}
proc fcQPaintEngine_override_virtual_updateState(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_updateState".}
proc fQPaintEngine_virtualbase_drawRects(self: pointer, rects: pointer, rectCount: cint): void{.importc: "QPaintEngine_virtualbase_drawRects".}
proc fcQPaintEngine_override_virtual_drawRects(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawRects".}
proc fQPaintEngine_virtualbase_drawRects2(self: pointer, rects: pointer, rectCount: cint): void{.importc: "QPaintEngine_virtualbase_drawRects2".}
proc fcQPaintEngine_override_virtual_drawRects2(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawRects2".}
proc fQPaintEngine_virtualbase_drawLines(self: pointer, lines: pointer, lineCount: cint): void{.importc: "QPaintEngine_virtualbase_drawLines".}
proc fcQPaintEngine_override_virtual_drawLines(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawLines".}
proc fQPaintEngine_virtualbase_drawLines2(self: pointer, lines: pointer, lineCount: cint): void{.importc: "QPaintEngine_virtualbase_drawLines2".}
proc fcQPaintEngine_override_virtual_drawLines2(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawLines2".}
proc fQPaintEngine_virtualbase_drawEllipse(self: pointer, r: pointer): void{.importc: "QPaintEngine_virtualbase_drawEllipse".}
proc fcQPaintEngine_override_virtual_drawEllipse(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawEllipse".}
proc fQPaintEngine_virtualbase_drawEllipseWithQRect(self: pointer, r: pointer): void{.importc: "QPaintEngine_virtualbase_drawEllipseWithQRect".}
proc fcQPaintEngine_override_virtual_drawEllipseWithQRect(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawEllipseWithQRect".}
proc fQPaintEngine_virtualbase_drawPath(self: pointer, path: pointer): void{.importc: "QPaintEngine_virtualbase_drawPath".}
proc fcQPaintEngine_override_virtual_drawPath(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawPath".}
proc fQPaintEngine_virtualbase_drawPoints(self: pointer, points: pointer, pointCount: cint): void{.importc: "QPaintEngine_virtualbase_drawPoints".}
proc fcQPaintEngine_override_virtual_drawPoints(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawPoints".}
proc fQPaintEngine_virtualbase_drawPoints2(self: pointer, points: pointer, pointCount: cint): void{.importc: "QPaintEngine_virtualbase_drawPoints2".}
proc fcQPaintEngine_override_virtual_drawPoints2(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawPoints2".}
proc fQPaintEngine_virtualbase_drawPolygon(self: pointer, points: pointer, pointCount: cint, mode: cint): void{.importc: "QPaintEngine_virtualbase_drawPolygon".}
proc fcQPaintEngine_override_virtual_drawPolygon(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawPolygon".}
proc fQPaintEngine_virtualbase_drawPolygon2(self: pointer, points: pointer, pointCount: cint, mode: cint): void{.importc: "QPaintEngine_virtualbase_drawPolygon2".}
proc fcQPaintEngine_override_virtual_drawPolygon2(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawPolygon2".}
proc fcQPaintEngine_override_virtual_drawPixmap(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawPixmap".}
proc fQPaintEngine_virtualbase_drawTextItem(self: pointer, p: pointer, textItem: pointer): void{.importc: "QPaintEngine_virtualbase_drawTextItem".}
proc fcQPaintEngine_override_virtual_drawTextItem(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawTextItem".}
proc fQPaintEngine_virtualbase_drawTiledPixmap(self: pointer, r: pointer, pixmap: pointer, s: pointer): void{.importc: "QPaintEngine_virtualbase_drawTiledPixmap".}
proc fcQPaintEngine_override_virtual_drawTiledPixmap(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawTiledPixmap".}
proc fQPaintEngine_virtualbase_drawImage(self: pointer, r: pointer, pm: pointer, sr: pointer, flags: cint): void{.importc: "QPaintEngine_virtualbase_drawImage".}
proc fcQPaintEngine_override_virtual_drawImage(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_drawImage".}
proc fQPaintEngine_virtualbase_coordinateOffset(self: pointer, ): pointer{.importc: "QPaintEngine_virtualbase_coordinateOffset".}
proc fcQPaintEngine_override_virtual_coordinateOffset(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_coordinateOffset".}
proc fcQPaintEngine_override_virtual_typeX(self: pointer, slot: int) {.importc: "QPaintEngine_override_virtual_type".}
proc fcQPaintEngine_delete(self: pointer) {.importc: "QPaintEngine_delete".}
proc fcQPaintEngineState_state(self: pointer, ): cint {.importc: "QPaintEngineState_state".}
proc fcQPaintEngineState_pen(self: pointer, ): pointer {.importc: "QPaintEngineState_pen".}
proc fcQPaintEngineState_brush(self: pointer, ): pointer {.importc: "QPaintEngineState_brush".}
proc fcQPaintEngineState_brushOrigin(self: pointer, ): pointer {.importc: "QPaintEngineState_brushOrigin".}
proc fcQPaintEngineState_backgroundBrush(self: pointer, ): pointer {.importc: "QPaintEngineState_backgroundBrush".}
proc fcQPaintEngineState_backgroundMode(self: pointer, ): cint {.importc: "QPaintEngineState_backgroundMode".}
proc fcQPaintEngineState_font(self: pointer, ): pointer {.importc: "QPaintEngineState_font".}
proc fcQPaintEngineState_matrix(self: pointer, ): pointer {.importc: "QPaintEngineState_matrix".}
proc fcQPaintEngineState_transform(self: pointer, ): pointer {.importc: "QPaintEngineState_transform".}
proc fcQPaintEngineState_clipOperation(self: pointer, ): cint {.importc: "QPaintEngineState_clipOperation".}
proc fcQPaintEngineState_clipRegion(self: pointer, ): pointer {.importc: "QPaintEngineState_clipRegion".}
proc fcQPaintEngineState_clipPath(self: pointer, ): pointer {.importc: "QPaintEngineState_clipPath".}
proc fcQPaintEngineState_isClipEnabled(self: pointer, ): bool {.importc: "QPaintEngineState_isClipEnabled".}
proc fcQPaintEngineState_renderHints(self: pointer, ): cint {.importc: "QPaintEngineState_renderHints".}
proc fcQPaintEngineState_compositionMode(self: pointer, ): cint {.importc: "QPaintEngineState_compositionMode".}
proc fcQPaintEngineState_opacity(self: pointer, ): float64 {.importc: "QPaintEngineState_opacity".}
proc fcQPaintEngineState_painter(self: pointer, ): pointer {.importc: "QPaintEngineState_painter".}
proc fcQPaintEngineState_brushNeedsResolving(self: pointer, ): bool {.importc: "QPaintEngineState_brushNeedsResolving".}
proc fcQPaintEngineState_penNeedsResolving(self: pointer, ): bool {.importc: "QPaintEngineState_penNeedsResolving".}
proc fcQPaintEngineState_delete(self: pointer) {.importc: "QPaintEngineState_delete".}


func init*(T: type gen_qpaintengine_types.QTextItem, h: ptr cQTextItem): gen_qpaintengine_types.QTextItem =
  T(h: h)
proc descent*(self: gen_qpaintengine_types.QTextItem, ): float64 =
  fcQTextItem_descent(self.h)
